mibanco-microservice/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mibanco-service
spec:
  selector:
    app: mibanco-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
